# CLCTool

./: README.md  clctool.py  install.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  main.yml  python-publish.yml
