[tool.poetry]
name = "CLCTool"
version = "0.1.0"
description = "Custom Linux Configuration Tool"
authors = ["SpoinkOSDevs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
