[tool.poetry]
name = "CLCTool"
version = "0.5.0"
description = """
CLCTool - Custom Linux Configuration Tool

A flexible and scalable tool for customizing Linux configurations.
"""
authors = ["SpoinkOSDevs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
